<resources>
    <string name="app_name">Becas ESCOM</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_conv">Convocatorias</string>
    <string name="btn_send">Enviar</string>
    <string name="transport">Seleccione cuántos medios de transporte utiliza para llegar a la escuela.</string>
    <string name="warning">Para hacer tu ruta de transporte debes estar en tu domicilio de residencia</string>
    <string name="route">Ruta de transporte</string>
    <string name="pdf">Crear PDF</string>
    <string name="show">Mostrar</string>
    <string name="main_menu">Página principal</string>
    <string name="transport_price">Indique las direccion de destino, qué tipo de transporte utiliza y que precio tiene.</string>
    <string name="vehicles1">De tu hogar a:</string>
    <string name="vehicles2">De la dirección anterior a:</string>
    <string name="vehicles3">De la dirección anterior a ESCOM</string>
    <string name="vehicles4">De tu hogar a ESCOM</string>
    <string name="address">Intoduce tu dirección</string>
    <string name="address_title">Dirección</string>
    <string name="price_title">Costo</string>
    <string name="type_title">Tipo</string>
    <string name="hint_address">Dirección de destino</string>
    <string name="hint_price">1.5</string>
    <string name="hint_change">ESCOM</string>
    <string name="price">Precio: $</string>
    <string name="type">Transporte: </string>
    <string name="conv_info1">A continuación se muestran las convocatorias disponibles.\n\n
        Las convocatorias se seleccionan con base en tu promedio y materias adeudadas.</string>
    <string name="conv_info2">Si quieres ver todas las becas disponibles favor de activar el interruptor de la derecha y seleccionar siguiente.</string>
    <string name="info">Más</string>
    <string name="add">Agregar documentos</string>
    <string name="becas">Becas disponibles</string>
    <string name="next">Siguiente</string>
    <string name="txtDocuments">Subir documentos</string>
    <string name="socio">Estudio socioeconómico</string>
    <string name="upload">Subir</string>
    <string name="cart_comp">Carta compromiso</string>
    <string name="ingr_egr">Formato de ingresos y egresos</string>
    <string name="dom">Comprobante de domicilio\n(No mayor a tres meses)</string>
    <string name="ingr">Comprobante de ingresos</string>
    <string name="actv">Actividad extracurricular</string>

    <!--GIBRAN-->
    <string name="txt_registrationnumber">No. Boleta: </string>
    <string name="txt_password">Contraseña: </string>
    <string name="txt_email">E-mail: </string>
    <string name="txt_contest">\tConvocatorias</string>
    <string name="txt_data">Datos Personales</string>
    <string name="txt_beca">Beca</string>
    <string name="txt_instructionRegister">A continuación, proporciona los datos solicitados.\n\n
        Después de dar click en el botón aceptar, se te enviará un mensaje a la dirección de correo electrónico
        con tu contraseña para que puedas acceder a la app. </string>
    <string name="btn_login">Entrar</string>
    <string name="btn_register">Regístrate</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="chk_remember">Recordar</string>
    <string name="hint_registrationnumber">Escribe tu boleta aquí</string>
    <string name="hint_password">Escribe tu contraseña aquí</string>
    <string name="hint_email">Correo electrónico</string>

    <string name="title_activity_login">Inicia Sesión</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_docs">Subir documentos</string>
    <string name="title_activity_transport">Medios de Transporte</string>
    <!--GIBRAN-->

    <string-array name="transport_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="route">

    </string-array>

    <string-array name="vehicles">
        <item>Camión</item>
        <item>Automóvil particular</item>
        <item>Combie/Microbús</item>
        <item>Taxi</item>
        <item>Metro</item>
        <item>Metrobús</item>
        <item>Mexibús</item>
        <item>Tren subúrbano</item>
    </string-array>

    <!-- NAVIGATION DRAWER STRINGS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu__lobby">Menú Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">escom.becas@gmail.com</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_user">Datos Personales</string>
    <string name="menu_contest">Convocatorias</string>
    <string name="menu_route">Traza tu Ruta</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Info</string>
</resources>
