<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contest"
            android:icon="@drawable/menu_scholarship"
            android:title="@string/menu_contest" />
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/menu_route"
            android:title="@string/menu_route" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/menu_logout"
            android:title="@string/menu_logout"
            />
    </group>
</menu>
